Fixed index images

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="programs__items">
                 <div class="programs__item">
-                    <img src="/images/it-image.jpg" alt="" class="programs__item_img">
+                    <img src="./images/it-image.jpg" alt="" class="programs__item_img">
                     <div class="program__item_content">
                         <h3>Information Technology.</h3>
                         <p>Career information and Future outlook    </p>
@@ -63,7 +63,7 @@
                 </div>
                
                 <div class="programs__item">
-                    <img src="/images/lock.jpg" alt="" class="programs__item_img">
+                    <img src="./images/lock.jpg" alt="" class="programs__item_img">
                     <div class="program__item_content">
                         <h3>Cyber Security.</h3>
                         <p>Career information and Future outlook    </p>
