--- a/specialities/cybersec/index.html
+++ b/specialities/cybersec/index.html
@@ -44,7 +44,7 @@
     <section class="content side__padding">
        <section class="sub_content">
            <!-- will have image and body -->
-           <img src="/images/people-behind-screens.jpg" alt="" class="sub_content__img">
+           <img src="./images/people-behind-screens.jpg" alt="" class="sub_content__img">
            <div class="sub_content__body">
                <h2>What is Cyber Security.</h2>
                <p>Cybersecurity can be described as the collective methods, technologies, and processes to help protect the confidentiality, integrity, and availability of computer systems, networks and data, against cyber-attacks or unauthorized access. The main purpose of cyber security is to protect all organizational assets from both external and internal threats as well as disruptions caused due to natural disasters.  <br>
