--- a/specialities/infotech/index.html
+++ b/specialities/infotech/index.html
@@ -44,7 +44,7 @@
     <section class="content side__padding">
        <section class="sub_content">
            <!-- will have image and body -->
-           <img src="/images/people-behind-screens.jpg" alt="" class="sub_content__img">
+           <img src="./images/people-behind-screens.jpg" alt="" class="sub_content__img">
            <div class="sub_content__body">
                <h2>What is Information Technology.</h2>
                <p>Information technology (IT) is the use of any computers, storage, networking and other physical devices, infrastructure and processes to create, process, store, secure and exchange all forms of electronic data. Typically, IT is used in the context of business operations, as opposed to technology used for personal or entertainment purposes. The commercial use of IT encompasses both computer technology and telecommunications.
