--- a/faq.html
+++ b/faq.html
@@ -13,24 +13,48 @@
         <span class="nav__logo"> cedar</span>
 
         <ul class="nav__links">
-           <li class="nav__link"><a href="/index.html">Home</a></li>
-                <li class="nav__link"><a href="/about.html">About</a></li>
-                <li class="nav__link"><a href="/faq.html">Faq</a></li>
-                <li class="nav__link">
-                  <span><a href="/specialities/infotech/index.html">Information Technology</a></span>
-                  <ul class="nav__dropdown">
-                      <li class="dropdown__item"><a href="/specialities/infotech/post_grad_online.html">Post-graduate Programs Online And in VA</a></li>
-                      <li class="dropdown__item"><a href="/specialities/infotech/financial_aid_scholarships.html">Financial Aid and Scholarship</a>s</li>
-                  </ul>
+          <li class="nav__link"><a href="./index.html">Home</a></li>
+          <li class="nav__link"><a href="./about.html">About</a></li>
+          <li class="nav__link"><a href="./faq.html">Faq</a></li>
+          <li class="nav__link">
+            <span
+              ><a href="/specialities/infotech/index.html"
+                >Information Technology</a
+              ></span
+            >
+            <ul class="nav__dropdown">
+              <li class="dropdown__item">
+                <a href="/specialities/infotech/post_grad_online.html"
+                  >Post-graduate Programs Online And in VA</a
+                >
               </li>
-             
-              <li class="nav__link">
-                  <span><a href="/specialities/cybersec/index.html">Cyber Security</a></span>
-                  <ul class="nav__dropdown">
-                      <li class="dropdown__item"><a href="/specialities/cybersec/post_grad_online.html">Post-graduate Programs Online And in VA</a></li>
-                      <li class="dropdown__item"><a href="/specialities/cybersec/financial_aid_scholarships.html">Financial Aid and Scholarships</a></li>
-                  </ul>
+              <li class="dropdown__item">
+                <a href="/specialities/infotech/financial_aid_scholarships.html"
+                  >Financial Aid and Scholarship</a
+                >s
               </li>
+            </ul>
+          </li>
+
+          <li class="nav__link">
+            <span
+              ><a href="/specialities/cybersec/index.html"
+                >Cyber Security</a
+              ></span
+            >
+            <ul class="nav__dropdown">
+              <li class="dropdown__item">
+                <a href="/specialities/cybersec/post_grad_online.html"
+                  >Post-graduate Programs Online And in VA</a
+                >
+              </li>
+              <li class="dropdown__item">
+                <a href="/specialities/cybersec/financial_aid_scholarships.html"
+                  >Financial Aid and Scholarships</a
+                >
+              </li>
+            </ul>
+          </li>
         </ul>
       </div>
     </nav>
