Fixed links referencing

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
           <li class="nav__link">
             <span
-              ><a href="/specialities/infotech/index.html"
+              ><a href="./specialities/infotech/index.html"
                 >Information Technology</a
               ></span
             >
             <ul class="nav__dropdown">
               <li class="dropdown__item">
-                <a href="/specialities/infotech/post_grad_online.html"
+                <a href="./specialities/infotech/post_grad_online.html"
                   >Post-graduate Programs Online And in VA</a
                 >
               </li>
               <li class="dropdown__item">
-                <a href="/specialities/infotech/financial_aid_scholarships.html"
+                <a href="./specialities/infotech/financial_aid_scholarships.html"
                   >Financial Aid and Scholarship</a
                 >s
               </li>
@@ -39,18 +39,18 @@
 
           <li class="nav__link">
             <span
-              ><a href="/specialities/cybersec/index.html"
+              ><a href="./specialities/cybersec/index.html"
                 >Cyber Security</a
               ></span
             >
             <ul class="nav__dropdown">
               <li class="dropdown__item">
-                <a href="/specialities/cybersec/post_grad_online.html"
+                <a href="./specialities/cybersec/post_grad_online.html"
                   >Post-graduate Programs Online And in VA</a
                 >
               </li>
               <li class="dropdown__item">
-                <a href="/specialities/cybersec/financial_aid_scholarships.html"
+                <a href="./specialities/cybersec/financial_aid_scholarships.html"
                   >Financial Aid and Scholarships</a
                 >
               </li>
@@ -88,7 +88,7 @@
               <p>Career information and Future outlook</p>
               <a
                 class="programs__action"
-                href="/specialities/infotech/index.html"
+                href="./specialities/infotech/index.html"
                 >More info</a
               >
             </div>
@@ -101,7 +101,7 @@
               <p>Career information and Future outlook</p>
               <a
                 class="programs__action"
-                href="/specialities/cybersec/index.html"
+                href="./specialities/cybersec/index.html"
                 >More info</a
               >
             </div>
