--- a/about.html
+++ b/about.html
@@ -18,18 +18,18 @@
           <li class="nav__link"><a href="./faq.html">Faq</a></li>
           <li class="nav__link">
             <span
-              ><a href="/specialities/infotech/index.html"
+              ><a href="./specialities/infotech/index.html"
                 >Information Technology</a
               ></span
             >
             <ul class="nav__dropdown">
               <li class="dropdown__item">
-                <a href="/specialities/infotech/post_grad_online.html"
+                <a href="./specialities/infotech/post_grad_online.html"
                   >Post-graduate Programs Online And in VA</a
                 >
               </li>
               <li class="dropdown__item">
-                <a href="/specialities/infotech/financial_aid_scholarships.html"
+                <a href="./specialities/infotech/financial_aid_scholarships.html"
                   >Financial Aid and Scholarship</a
                 >s
               </li>
@@ -38,18 +38,18 @@
 
           <li class="nav__link">
             <span
-              ><a href="/specialities/cybersec/index.html"
+              ><a href="./specialities/cybersec/index.html"
                 >Cyber Security</a
               ></span
             >
             <ul class="nav__dropdown">
               <li class="dropdown__item">
-                <a href="/specialities/cybersec/post_grad_online.html"
+                <a href="./specialities/cybersec/post_grad_online.html"
                   >Post-graduate Programs Online And in VA</a
                 >
               </li>
               <li class="dropdown__item">
-                <a href="/specialities/cybersec/financial_aid_scholarships.html"
+                <a href="./specialities/cybersec/financial_aid_scholarships.html"
                   >Financial Aid and Scholarships</a
                 >
               </li>
